
=item *

The C<throw_error()> method in L<Bric::Util::Burner|Bric::Util::Burner> works
properly again. Thank to Paul Orrock for the spot and to Scott for revealing
the solution. [David]

=item *

The "Story Type" and "Media Type" options for sorting stories and media,
respectively, on desks and on My Workspace, works again. Reported by Brad
Harder. [David]

=back

=head1 VERSION 1.10.1 (2006-03-20)

=head2 New Features

=over

=item *

Added a guide on how to profile Mason templates. See
F<contrib/template_profiling>. [Scott]

=item *

Added ContribType, Destination, and Preference SOAP modules. [Scott]

=item *

When a page finishes loading, the first text or textarea form field now
automatically gets the focus. [David]

=item *

Added upload and download feature to the template interface, so that templates
can optionally be uploaded or downloaded. Suggested by Chris Sutton. [David]

=back

=head2 Improvements

=over

=item *

When a story is previewed, any related media are distributed to the preview
server only if the C<AUTO_PREVIEW_MEDIA> F<bricolage.conf> directive is
disabled or the media documents need to be previewed. [David]

=item *

Added installation defaults for FreeBSD that will be used when the
C<USE_DEFAULTS> environment variable is set to "freebsd" during installation.
[Rod Taylor]

=item *

Added a C<make devclone> option which does the same as C<make clone> but
removes all of the locally previewed files, the F<data/obj> files, staging and
sandboxes. This means a large saving in download size for cloned production
systems. [Paul Orrock]

=item *

Added C<ALLOW_URIS_WITHOUT_CATEGORIES> F<bricolage.conf> directive to allow
URI formats not to include "%{categories}", which is otherwise rquired. Use
this directive with caution since it is not the recommended behaviour. [Paul
Orrock]

=item *

Added a tooltip to show the underlying Bricolage database ID when hovering
over a UUID in a story profile. This feature complements showing the UUID when